--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@msgpack/msgpack": "^3.0.0-beta2",
     "@types/node": "^22.5.4",
+    "@types/serviceworker": "^0.0.99",
+    "avatar-initials": "^4.1.1",
     "peerjs": "^1.5.4",
+    "tiny-typed-emitter": "^2.1.0",
     "tsd": "^0.31.2"
   },
   "devDependencies": {
