--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build-dev": "webpack --mode=development --watch",
-    "build-prod": "webpack --mode=production --node-env=production",
+    "build-prod": "npm i & webpack --mode=production --node-env=production",
     "watch": "webpack --watch"
   },
   "keywords": [],
