--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build-dev": "webpack --mode=development --watch",
-    "build-prod": "npm i & webpack --mode=production --node-env=production",
+    "build-prod": "npm i --dev ; webpack --mode=production --node-env=production",
     "watch": "webpack --watch"
   },
   "keywords": [],
@@ -27,6 +27,7 @@
     "prettier": "^3.3.3",
     "sass": "^1.78.0",
     "sass-loader": "^16.0.1",
+    "serve": "^14.2.4",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
